update button color

--- a/particle_dark/assets/css/custom/colors.css
+++ b/particle_dark/assets/css/custom/colors.css
@@ -55,7 +55,7 @@ footer p a:hover,
 .image-section .btn-lg,
 .social-icons li a,
 .portfolio-headline .btn-default {
-    background: #bf8046;
+    background: #f79824;
 }
 
 /* primary color 3 */
