--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -1359,7 +1359,7 @@ header #st-logo img {
 
 .contact-info,
 .contact-form {
-    height: 480px;
+    height: 500px;
     width: 45%;
     display: inline-block;
     background-color: rgba(255, 255, 255, 0.07);
@@ -3498,6 +3498,10 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     font-weight: 700;
 }
 
+#contact > div > div > div > div.contact-content > div.contact-form > form > div > label {
+    font-weight: normal;
+}
+
 #services > div > div.service-2.wow.fadeIn.animated > div > div:nth-child(4) > div.col-sm-4 > div > p, #services > div > div.service-2.wow.fadeIn.animated > div > div:nth-child(6) > div.col-sm-4 > div > p {
     width: max-content;
 }
@@ -3518,11 +3522,11 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     font-size: 50px;
 }
 
-#wedo > div > div > div > div > h3, #about > div > div > div > div.about-text > h3 > span, #quote > div.container-fluid > div > div.col-md-12.quote-headline > h4, #services > div > div.col-lg-12.service-content > div > div > p > span, #services > div > div > p.wow.fadeIn.animated, #services > div > div > p {
+#wedo > div > div > div > div > h3, #about > div > div > div > div.about-text > h3 > span, #quote > div.container-fluid > div > div.col-md-12.quote-headline > h4, #services > div > div.col-lg-12.service-content > div > div > p > span, #services > div > div > p.wow.fadeIn.animated, #services > div > div > p, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > h3 > a, #contact > div > div > div > div.contact-content > div.contact-info > p, #contact > div > div > div > div.contact-content > div.contact-form > h4 {
     font-size: 30px !important;
 }
 
-#our-work > div > div > div.col-md-12.new-style > p, #about > div > div > div > div.about-text > p, #about > div > div > div > div.about-text > ul > li > div.text, #services > div > div > div.col-md-12.service-headline > p, #services > div > div > div.col-md-12.service-content > div > div > div.text > h4, #services > div > div.col-lg-12.service-content > div > div > div > div.info-text.wow.fadeIn.animated > p, #call-to > div.container > div > div > p, #skills > div > div > div > div > p {
+#our-work > div > div > div.col-md-12.new-style > p, #about > div > div > div > div.about-text > p, #about > div > div > div > div.about-text > ul > li > div.text, #services > div > div > div.col-md-12.service-headline > p, #services > div > div > div.col-md-12.service-content > div > div > div.text > h4, #services > div > div.col-lg-12.service-content > div > div > div > div.info-text.wow.fadeIn.animated > p, #call-to > div.container > div > div > p, #skills > div > div > div > div > p, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > p, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > a, #contact > div > div > div > div.contact-content > div.contact-info > div > div.info-text.wow.fadeIn.animated > p, #contact > div > div > div > div.contact-content > div.contact-form > form > div > label, #contact > div > div > div > div.contact-content > div.contact-info > div.bottom-info > h4 {
     font-size: 22px;
 }
 
